fix: fixed overflowed uploaded file name in Uploading file buttons

--- a/css/app.scss
+++ b/css/app.scss
@@ -119,3 +119,14 @@ text-align: right;
 .ant-breadcrumb {
   padding: 1em 0 0 0;
 }
+
+// Upload field components
+
+.upload-info {
+  max-width: 50%;
+}
+
+.upload-button-field {
+  overflow: hidden;
+  max-width: 50%;
+}
